--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -41,7 +41,7 @@
             android:padding="20dp"
             android:layout_marginHorizontal="10dp"
             android:background="@drawable/ic_send_black_24dp"
-            android:onClick="sendMessage"/>
+            android:onClick="chatOnClick"/>
 
     </LinearLayout>
 </LinearLayout>
