Redesign UI/UX, not sure item intent is useable

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -73,7 +73,6 @@
         android:id="@+id/description_editText"
         android:layout_width="216dp"
         android:layout_height="159dp"
-        android:background="#FFFFFF"
         android:ems="10"
         android:gravity="top|left"
         android:maxLines="10"
@@ -104,13 +103,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/sell_button"
         app:layout_constraintEnd_toStartOf="@+id/photo2_imageView"
-        app:layout_constraintHorizontal_bias="0.966"
+        app:layout_constraintHorizontal_bias="0.983"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_editText"
-        app:layout_constraintVertical_bias="0.461"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <ImageView
@@ -119,11 +115,8 @@
         android:layout_height="134dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/sell_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_editText"
-        app:layout_constraintVertical_bias="0.461"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <TextView
@@ -141,12 +134,30 @@
         app:layout_constraintHorizontal_bias="0.92"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/photo2_imageView"
-        app:layout_constraintVertical_bias="0.363" />
+        app:layout_constraintVertical_bias="0.449" />
+
+    <Button
+        android:id="@+id/contact_button"
+        android:layout_width="93dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="Contact"
+        android:text="@string/contact_buyer"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.914"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/photo2_imageView"
+        app:layout_constraintVertical_bias="0.482" />
 
     <Button
         android:id="@+id/buyer_button"
-        android:layout_width="81dp"
-        android:layout_height="wrap_content"
+        android:layout_width="93dp"
+        android:layout_height="47dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -155,35 +166,18 @@
         android:text="@string/buyer_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.923"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/contact_button"
+        app:layout_constraintHorizontal_bias="0.968"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/photo2_imageView"
-        app:layout_constraintVertical_bias="0.392" />
-
-    <Button
-        android:id="@+id/sell_button"
-        android:layout_width="125dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="298dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="48dp"
-        android:onClick="soldOut"
-        android:text="@string/seller_button_sold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintDimensionRatio="w,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_editText"
-        app:layout_constraintVertical_bias="0.849" />
+        app:layout_constraintVertical_bias="0.482" />
 
     <Button
         android:id="@+id/reject_button"
-        android:layout_width="125dp"
-        android:layout_height="53dp"
+        android:layout_width="93dp"
+        android:layout_height="47dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:onClick="Reject"
@@ -191,9 +185,29 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toStartOf="@+id/sell_button"
-        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintHorizontal_bias="0.604"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/sell_button"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/photo1_imageView"
+        app:layout_constraintVertical_bias="0.482" />
+
+    <Button
+        android:id="@+id/sell_button"
+        android:layout_width="93dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="soldOut"
+        android:text="@string/seller_button_sold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toStartOf="@+id/contact_button"
+        app:layout_constraintHorizontal_bias="0.968"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/photo2_imageView"
+        app:layout_constraintVertical_bias="0.482" />
+
+
 
 </android.support.constraint.ConstraintLayout>
